# RISC-V-Simulator

./: CMakeLists.txt
sample/: test.data
src/: CDB.cpp  CDB.h  CPU.h  Decoder.cpp  Decoder.h  Instruction.h  LSB.cpp  LSB.h  LoopList.h  Memory.cpp  Memory.h  Predictor.h  ROB.cpp  ROB.h  RS.cpp  RS.h  Registers.cpp  Registers.h  Simulator.cpp  Simulator.h  main.cpp
